Mid refactor WIP - move out level/sprite data

--- a/index.html
+++ b/index.html
@@ -17,21 +17,42 @@
 
 <canvas id='gameboard' width='500' height='500'></canvas>
 <script>
+  var levelData = { 
+     1:  [[0,0,0,0,0,0,0,0,0,0,0],
+          [0,0,0,0,0,0,0,0,0,0,0],
+          [0,0,0,0,0,0,0,0,0,0,0],
+          [0,0,0,0,0,0,0,0,0,0,0],
+          [0,0,0,0,0,0,0,0,0,0,0],
+          [0,0,1,1,1,1,1,1,1,1,0],
+          [0,0,1,1,1,1,1,1,1,1,0],
+          [0,0,1,1,1,1,1,1,1,1,0],
+          [0,0,1,1,1,1,1,1,1,1,0],
+          [0,0,1,1,1,1,1,1,1,1,0],
+          [0,0,1,1,1,1,1,1,1,1,0]],
+     2:  [[0,0,0,0,0,0,0,0,0,0,0],
+          [0,0,0,0,0,0,0,0,0,0,0],
+          [0,0,0,0,0,0,0,0,0,0,0],
+          [0,0,0,0,0,0,0,0,0,0,0],
+          [0,0,0,0,0,0,0,0,0,0,0],
+          [0,0,2,2,2,2,2,2,2,2,0],
+          [0,0,2,2,2,2,2,2,2,2,0],
+          [0,0,1,1,1,1,1,1,1,1,0],
+          [0,0,1,1,1,1,1,1,1,1,0],
+          [0,0,1,1,1,1,1,1,1,1,0],
+          [0,0,1,1,1,1,1,1,1,1,0]] };
+
+  var spriteData = {
+    'alien1': { sx: 0,  sy: 0,  w: 23, h: 18, cls: Alien, frames: 2 },
+    'alien2': { sx: 23, sy: 0,  w: 23, h: 18, cls: Alien },
+    'player': { sx: 0,  sy: 18 ,w: 26, h: 17, cls: Player },
+    'missle': { sx: 0,  sy: 68, w: 2,  h: 17, cls: Missle }
+  }
+
   $(function() {
+    Game.setData(levelData,spriteData)
     Game.initialize("#gameboard",function() { 
-      Game.play(
-      [[0,0,0,0,0,0,0,0,0,0,0],
-       [0,0,0,0,0,0,0,0,0,0,0],
-       [0,0,0,0,0,0,0,0,0,0,0],
-       [0,0,0,0,0,0,0,0,0,0,0],
-       [0,0,0,0,0,0,0,0,0,0,0],
-       [0,0,1,1,1,1,1,1,1,1,0],
-       [0,0,1,1,1,1,1,1,1,1,0],
-       [0,0,1,1,1,1,1,1,1,1,0],
-       [0,0,1,1,1,1,1,1,1,1,0],
-       [0,0,1,1,1,1,1,1,1,1,0],
-       [0,0,1,1,1,1,1,1,1,1,0]]
-      ); 
+      Game.loadBoard(new GameBoard(level)); 
+      Game.loop(); 
      
      });
   });
