--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Alien Invaders</title>
-  <link rel='Stylesheet' href='style.css'  type='text/css'/>
   <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'></script>
   <script src='js/engine.js'></script>
   <script src='js/game.js'></script>
 
   <style>
-    #gameboard { background-color:black; }
-
+      #gameboard { background-color:black; }
   </style>
 
 </head>
 <body>
+
 
 <canvas id='gameboard' width='500' height='500'></canvas>
 <script>
@@ -24,7 +23,7 @@
           [0,0,0,0,0,0,0,0,0,0,0],
           [0,0,0,0,0,0,0,0,0,0,0],
           [0,0,0,0,0,0,0,0,0,0,0],
-          [0,0,1,1,1,1,1,1,1,1,0],
+          [0,0,1,1,1,2,1,1,1,1,0],
           [0,0,1,1,1,1,1,1,1,1,0],
           [0,0,1,1,1,1,1,1,1,1,0],
           [0,0,1,1,1,1,1,1,1,1,0],
@@ -44,9 +43,9 @@
 
   var spriteData = {
     'alien1': { sx: 0,  sy: 0,  w: 23, h: 18, cls: Alien, frames: 2 },
-    'alien2': { sx: 23, sy: 0,  w: 23, h: 18, cls: Alien },
-    'player': { sx: 0,  sy: 18 ,w: 26, h: 17, cls: Player },
-    'missle': { sx: 0,  sy: 68, w: 2,  h: 17, cls: Missle }
+    'alien2': { sx: 0,  sy: 18, w: 23, h: 18, cls: Alien, frames: 2 },
+    'player': { sx: 0,  sy: 36, w: 26, h: 17, cls: Player },
+    'missle': { sx: 0,  sy: 86, w: 3,  h: 14, cls: Missle }
   }
 
   function startGame() {
@@ -67,7 +66,10 @@
   }
 
   $(function() {
-    Game.initialize("#gameboard", levelData, spriteData, startGame, endGame);
+    GameAudio.load({ 'fire' : 'media/laser.ogg', 'die' : 'media/explosion.ogg' }, function() { 
+      GameAudio.play('fire');
+      Game.initialize("#gameboard", levelData, spriteData, startGame, endGame);
+    });
   });
 </script>
 </body>
