--- a/index.html
+++ b/index.html
@@ -6,70 +6,16 @@
   <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'></script>
   <script src='js/engine.js'></script>
   <script src='js/game.js'></script>
+  <script src='js/level.js'></script>
 
   <style>
       #gameboard { background-color:black; }
+      #game-wrapper { margin:0 auto; width: 500px; }
   </style>
-
 </head>
 <body>
-
-
-<canvas id='gameboard' width='500' height='500'></canvas>
-<script>
-  var levelData = { 
-     1:  [[0,0,0,0,0,0,0,0,0,0,0],
-          [0,0,0,0,0,0,0,0,0,0,0],
-          [0,0,0,0,0,0,0,0,0,0,0],
-          [0,0,0,0,0,0,0,0,0,0,0],
-          [0,0,0,0,0,0,0,0,0,0,0],
-          [0,0,1,1,1,2,1,1,1,1,0],
-          [0,0,1,1,1,1,1,1,1,1,0],
-          [0,0,1,1,1,1,1,1,1,1,0],
-          [0,0,1,1,1,1,1,1,1,1,0],
-          [0,0,1,1,1,1,1,1,1,1,0],
-          [0,0,1,1,1,1,1,1,1,1,0]],
-     2:  [[0,0,0,0,0,0,0,0,0,0,0],
-          [0,0,0,0,0,0,0,0,0,0,0],
-          [0,0,0,0,0,0,0,0,0,0,0],
-          [0,0,0,0,0,0,0,0,0,0,0],
-          [0,0,0,0,0,0,0,0,0,0,0],
-          [0,0,2,2,2,2,2,2,2,2,0],
-          [0,0,2,2,2,2,2,2,2,2,0],
-          [0,0,1,1,1,1,1,1,1,1,0],
-          [0,0,1,1,1,1,1,1,1,1,0],
-          [0,0,1,1,1,1,1,1,1,1,0],
-          [0,0,1,1,1,1,1,1,1,1,0]] };
-
-  var spriteData = {
-    'alien1': { sx: 0,  sy: 0,  w: 23, h: 18, cls: Alien, frames: 2 },
-    'alien2': { sx: 0,  sy: 18, w: 23, h: 18, cls: Alien, frames: 2 },
-    'player': { sx: 0,  sy: 36, w: 26, h: 17, cls: Player },
-    'missle': { sx: 0,  sy: 86, w: 3,  h: 14, cls: Missle }
-  }
-
-  function startGame() {
-    var screen = new GameScreen("Alien Invaders","press space to start",
-                                 function() {
-                                     Game.loadBoard(new GameBoard(1));
-                                 });
-    Game.loadBoard(screen);
-    Game.loop();
-  }
-
-  function endGame() {
-    var screen = new GameScreen("Game Over","(press space to restart)",
-                                 function() {
-                                     Game.loadBoard(new GameBoard(1));
-                                 });
-    Game.loadBoard(screen);
-  }
-
-  $(function() {
-    GameAudio.load({ 'fire' : 'media/laser.ogg', 'die' : 'media/explosion.ogg' }, function() { 
-      Game.initialize("#gameboard", levelData, spriteData, startGame, endGame);
-    });
-  });
-</script>
+  <div id='game-wrapper'>
+    <canvas id='gameboard' width='500' height='500'></canvas>
+  </div>
 </body>
 </html>
